test/must_fail/api/must_fail_ngspice_log.ref
error: ngspice_log() require exactly 0 arguments but 1 was given
  [must_fail_ngspice_log.ngjs:0:0] in <anonymous>()
    Internal.ngspice_log(123);
             ^

hint: function 'ngspice_log()' was called with 1 arguments
hint: argument #0 was 123 (number)

Stack trace (1 frames):
  [must_fail_ngspice_log.ngjs:0:0] in <anonymous>()
    Internal.ngspice_log(123);
             ^

exit(7)
