test/must_fail/api/must_fail_ngspice_log.ngjs
#!/usr/bin/env ngspicejs
// no arg needed
// linter: ngspicejs-lint
"use strict";

Internal.ngspice_log(123);
